# harness-engineering

./: .gitignore  README.md
docs-readme/ar-SA/: README.md
docs-readme/de-DE/: README.md
docs-readme/es-ES/: README.md
docs-readme/fr-FR/: README.md
docs-readme/ja-JP/: README.md
docs-readme/ko-KR/: README.md
docs-readme/pt-BR/: README.md
docs-readme/ru-RU/: README.md
docs-readme/tr-TR/: README.md
docs-readme/uz-UZ/: README.md
docs-readme/vi-VN/: README.md
docs-readme/zh-CN/: README.md
docs-readme/zh-TW/: README.md
docs/.vitepress/: config.mts
docs/ar/: index.md
docs/ar/resources/: index.md
docs/de/: index.md
docs/en/: index.md
docs/es/: index.md
docs/fr/: index.md
docs/ja/: index.md
docs/ko/: index.md
docs/pt-BR/: index.md
docs/ru/: index.md
docs/tr/: index.md
docs/uz/: GLOSSARY.md  index.md
docs/vi/: index.md
docs/zh/: index.md
docs/zh-TW/: index.md
projects/project-01/: README-CN.md  README-KO.md  README-PT-BR.md  README.md
projects/project-02/: README-CN.md  README-KO.md  README-PT-BR.md  README.md
projects/project-03/: README-CN.md  README-KO.md  README-PT-BR.md  README.md
projects/project-04/: README-CN.md  README-KO.md  README-PT-BR.md  README.md
projects/project-05/: README-CN.md  README-KO.md  README-PT-BR.md  README.md
projects/project-06/: README-CN.md  README-KO.md  README-PT-BR.md  README.md
projects/project-07/: README.md
projects/project-07/starter/: README.md  pyproject.toml
projects/project-07/starter/src/multi_harness/: __init__.py  adapters.py  main.py  orchestrator.py  policy.py
(+476 files in other folders)
