[project]
name = "multi-harness-starter"
version = "0.1.0"
description = "Starter project for a multi-harness orchestrator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
